--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack --watch",
-    "build": "webpack"
+    "build": "webpack -w"
   },
   "author": {
     "name": "Harikrishnan",
@@ -25,6 +25,22 @@
     "babel-loader": "^7.0.0",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-plugin-transform-react-jsx": "^6.24.1",
-    "babel-preset-env": "^1.5.1"
-  }
+    "babel-preset-env": "^1.5.1",
+    "css-loader": "^1.0.0",
+    "style-loader": "^0.23.0"
+  },
+  "keywords": [
+    "image",
+    "hover",
+    "react",
+    "react image hover",
+    "content effect",
+    "image effect",
+    "image hover image"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/hkkr123git/react-image-hover.git"
+  },
+  "license": "MIT"
 }
